@@ -1,3 +1,8 @@
+2009-04-20  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/39675
+	* gcc.dg/vect/O3-pr39675-1.c: New test.
+
 2009-04-19  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* lib/gnat.exp (local_find_gnatmake): Pass --LINK to gnatlink.
