@@ -1,3 +1,11 @@
+2009-04-20  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/39675
+	* tree-vect-transform.c (vect_transform_loop): Remove currently
+	redundant check of the return code of vect_schedule_slp. Check that
+	stmt_vec_info still exists for the statement, before checking its
+	vectorization type.
+
 2009-04-17  Aurelien Jarno  <aurelien@aurel32.net>
 
 	* config.gcc: Add soft-fp/t-softfp and i386/t-linux to tmake_file
